<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="GVL_OPC_UA" Id="{13cb8d73-1df7-470b-8c80-ab1505072c03}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	// Verbindungsinformationen
	IP 				:ARRAY [0..6] OF STRING := [
		        'opc.tcp://169.254.240.1:4840', 
        		'opc.tcp://169.254.240.2:4840',
				'opc.tcp://169.254.240.3:4840', 
				'opc.tcp://169.254.240.4:4840', 
				'opc.tcp://169.254.240.5:4840', 
 				'opc.tcp://169.254.240.6:4840', 
        		'opc.tcp://169.254.240.7:4840'];	
	NameSpace		:STRING(MAX_STRING_LENGTH) := 'urn:BeckhoffAutomation:Ua:PLC1';
	ConnectionHdl	:ARRAY [0..6] OF DWORD := [];
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>