<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="GVL" Id="{98f80527-ec25-4857-b75e-cbd6bf3c2223}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
		
	// Rezeptparameter
	R1_CW			:RezeptControlWord;				// Lokale definierung der Parameter
	R1_SW			:RezeptStatusWord;				// Statusword für internen Handling
	
	R2_CW			:RezeptControlWord;				// Lokale definierung der Parameter
	R2_SW			:RezeptStatusWord;				// Statusword für internen Handling
	
	// Leitungs-Control-Word
	
	// SekundärControlWord
	SekControlWord	:SekControlWord;
	SekUpdate		:BOOL;
	
	// SystemStatusWord
	SysStatusWord	:SystemStatusWord;
	SysUpdate		:BOOL;
	
	// Funktionsvariablen
	SysState		:INT;							// 0 = Prozess läuft nicht | 1 = Prozess läuft
	
	// Bedienparameter 
	Start			:BOOL;
	
	// Zustands-Variablen
	Error			:BOOL;
	ErrorID			:DWORD;
	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>